--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
-    "@react-native-picker/picker": "github:react-native-picker/picker",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/drawer": "^6.6.5",
     "@react-navigation/material-bottom-tabs": "^6.2.18",
@@ -38,7 +38,9 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-json-tree": "^1.3.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.0",
+    "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
